# rust-clean

./: Cargo.toml  README.md
src/: main.rs
