[package]
name = "rust-clean"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.15"
tokio = { version = "1.20.1", features = ["full"] }
hyper = { version = "0.14.20", features = ["full"] } 
tower = "0.4.13"